src/main/java/com/example/testProject/error/NotFoundException.java
package com.example.testProject.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}

